--- a/TicTacToe/app/src/main/res/layout/activity_main.xml
+++ b/TicTacToe/app/src/main/res/layout/activity_main.xml
@@ -12,10 +12,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <com.adrianaisemberg.tictactoe.echo.EchoView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="sup" />
+            android:layout_height="wrap_content" />
 
     </RelativeLayout>
 </layout>
