--- a/TicTacToe/app/src/main/res/layout/activity_main.xml
+++ b/TicTacToe/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -13,6 +14,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/connectivity_indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -26,11 +28,20 @@
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
+        <com.adrianaisemberg.tictactoe.gameboard.GameboardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@id/button_new_game"
+            android:layout_below="@id/connectivity_indicator"
+            app:game="@{viewModel.game}" />
+
         <Button
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:id="@+id/button_new_game"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             android:layout_margin="16dp"
             android:onClick="@{() -> viewModel.startNewGame()}"
             android:text="@string/new_game" />
