--- a/TicTacToe/app/src/main/res/layout/view_gameboard.xml
+++ b/TicTacToe/app/src/main/res/layout/view_gameboard.xml
@@ -9,10 +9,11 @@
 
     </data>
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/board_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    </RelativeLayout>
+    </LinearLayout>
 </layout>
