--- a/TicTacToe/app/src/main/res/layout/view_gameboard_cell.xml
+++ b/TicTacToe/app/src/main/res/layout/view_gameboard_cell.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -15,10 +14,10 @@
         android:layout_height="match_parent"
         android:padding="20dp">
 
-        <com.adrianaisemberg.tictactoe.views.CircleFillView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            app:fillColor="@{0xff0000ff}" />
+        <ImageView
+            android:id="@+id/cell_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
 
     </RelativeLayout>
 </layout>
