--- a/TicTacToe/app/src/main/res/layout/activity_main.xml
+++ b/TicTacToe/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
         </LinearLayout>
 
         <com.adrianaisemberg.tictactoe.gameboard.GameboardView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@id/button_new_game"
             android:layout_below="@id/connectivity_indicator"
