--- a/TicTacToe/app/src/main/res/layout/view_gameboard.xml
+++ b/TicTacToe/app/src/main/res/layout/view_gameboard.xml
@@ -7,13 +7,19 @@
             name="viewModel"
             type="com.adrianaisemberg.tictactoe.gameboard.GameboardViewModel" />
 
+        <import type="com.adrianaisemberg.tictactoe.utils.Drawables" />
     </data>
 
-    <LinearLayout
-        android:id="@+id/board_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@{viewModel.background}">
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/board_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </FrameLayout>
+
 </layout>
