--- a/TicTacToe/app/src/main/res/layout/view_gameboard_cell.xml
+++ b/TicTacToe/app/src/main/res/layout/view_gameboard_cell.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -17,7 +18,8 @@
         <ImageView
             android:id="@+id/cell_image"
             android:layout_width="50dp"
-            android:layout_height="50dp" />
+            android:layout_height="50dp"
+            app:drawableResId="@{viewModel.image}" />
 
     </RelativeLayout>
 </layout>
